# SampleCharm

./: .env.example  .gitignore  SampleCharm_LLM_Feature_Expansion_Design.html  gui.py  main.py  pyproject.toml  requirements.txt  setup.py
config/: config.yaml
src/: __init__.py  cli.py
src/analyzers/: __init__.py
src/analyzers/llm/: __init__.py  llm_analyzer.py
src/analyzers/musical/: __init__.py  librosa_musical.py
src/analyzers/percussive/: __init__.py  random_forest.py
src/analyzers/rhythmic/: __init__.py  librosa_rhythmic.py
src/analyzers/source/: __init__.py  yamnet.py  yamnet_annotated.py
src/analyzers/speech/: __init__.py  whisper_speech.py
src/core/: __init__.py  analyzer_base.py  batch_processor.py  cache.py  engine.py  engine_annotated.py  features.py  loader.py  loader_annotated.py  models.py  models_annotated.py  multi_strategy.py  queue_manager.py  result_writer.py
src/features/: __init__.py  client.py  estimator.py  gate.py  manager.py  models.py  prompt_helpers.py  protocols.py
src/features/implementations/: __init__.py  anomaly_reporter.py  batch_rename.py  daw_suggestions.py  marketplace_description.py  natural_language_search.py  production_notes.py  sample_chain.py  sample_pack_curator.py  similar_sample_finder.py  speech_deep_analyzer.py
src/utils/: __init__.py  config.py  config_annotated.py  errors.py  errors_annotated.py  logging.py  logging_annotated.py  prompts.py
src/visualization/: __init__.py  waveform.py
tests/test_features/: conftest.py  test_client.py  test_engine_integration.py  test_estimator.py  test_gate.py  test_implementations.py  test_implementations_full.py  test_manager.py  test_prompt_helpers.py
